--- a/src/Trace/Trace.csproj
+++ b/src/Trace/Trace.csproj
@@ -157,6 +157,7 @@
     <Content Include="assets\global\plugins\angularjs\plugins\ui-bootstrap-tpls.min.js" />
     <Content Include="assets\global\plugins\angularjs\plugins\ui-select\select.min.css" />
     <Content Include="assets\global\plugins\angularjs\plugins\ui-select\select.min.js" />
+    <Content Include="assets\global\plugins\baidumap\angular-baidu-map.js" />
     <Content Include="assets\global\plugins\bootstrap-hover-dropdown\bootstrap-hover-dropdown.js" />
     <Content Include="assets\global\plugins\bootstrap-hover-dropdown\bootstrap-hover-dropdown.min.js" />
     <Content Include="assets\global\plugins\bootstrap-switch\css\bootstrap-switch.css" />
@@ -489,6 +490,8 @@
     <Content Include="views\gift\index.js" />
     <Content Include="views\gift\modal.html" />
     <Content Include="views\gift\modal.js" />
+    <Content Include="views\map\index.html" />
+    <Content Include="views\map\index.js" />
     <Content Include="views\prize\index.html" />
     <Content Include="views\prize\index.js" />
     <Content Include="views\prize\modal.html" />
