--- a/src/Trace/Trace.csproj
+++ b/src/Trace/Trace.csproj
@@ -215,6 +215,8 @@
     <Content Include="assets\global\plugins\morris\raphael-min.js" />
     <Content Include="assets\global\plugins\ng-sweet-alert.js" />
     <Content Include="assets\global\plugins\plupload\angular-local-storage.js" />
+    <Content Include="assets\global\plugins\plupload\fileupload.css" />
+    <Content Include="assets\global\plugins\plupload\upload.jpg" />
     <Content Include="assets\global\plugins\plupload\qupload.js" />
     <Content Include="assets\global\plugins\qrcode.js" />
     <Content Include="assets\global\plugins\select2\css\select2-bootstrap.min.css" />
@@ -523,19 +525,6 @@
     <Content Include="assets\layouts\layout\img\ajax-modal-loading.gif" />
     <Content Include="assets\layouts\layout\img\arrow-down.png" />
     <Content Include="assets\layouts\layout\img\avatar.png" />
-    <Content Include="assets\layouts\layout\img\avatar1.jpg" />
-    <Content Include="assets\layouts\layout\img\avatar10.jpg" />
-    <Content Include="assets\layouts\layout\img\avatar11.jpg" />
-    <Content Include="assets\layouts\layout\img\avatar1_small.jpg" />
-    <Content Include="assets\layouts\layout\img\avatar2.jpg" />
-    <Content Include="assets\layouts\layout\img\avatar3.jpg" />
-    <Content Include="assets\layouts\layout\img\avatar3_small.jpg" />
-    <Content Include="assets\layouts\layout\img\avatar4.jpg" />
-    <Content Include="assets\layouts\layout\img\avatar5.jpg" />
-    <Content Include="assets\layouts\layout\img\avatar6.jpg" />
-    <Content Include="assets\layouts\layout\img\avatar7.jpg" />
-    <Content Include="assets\layouts\layout\img\avatar8.jpg" />
-    <Content Include="assets\layouts\layout\img\avatar9.jpg" />
     <Content Include="assets\layouts\layout\img\efanlogo.png" />
     <Content Include="assets\layouts\layout\img\hor-menu-red-arrow.png" />
     <Content Include="assets\layouts\layout\img\icon-color-close.png" />
@@ -547,14 +536,7 @@
     <Content Include="assets\layouts\layout\img\loading-spinner-default.gif" />
     <Content Include="assets\layouts\layout\img\loading-spinner-grey.gif" />
     <Content Include="assets\layouts\layout\img\loading.gif" />
-    <Content Include="assets\layouts\layout\img\logo-big-white.png" />
-    <Content Include="assets\layouts\layout\img\logo-big.png" />
-    <Content Include="assets\layouts\layout\img\logo-invert.png" />
-    <Content Include="assets\layouts\layout\img\logo.png" />
     <Content Include="assets\layouts\layout\img\menu-toggler.png" />
-    <Content Include="assets\layouts\layout\img\photo1.jpg" />
-    <Content Include="assets\layouts\layout\img\photo2.jpg" />
-    <Content Include="assets\layouts\layout\img\photo3.jpg" />
     <Content Include="assets\layouts\layout\img\remove-icon-small.png" />
     <Content Include="assets\layouts\layout\img\search_icon_light.png" />
     <Content Include="assets\layouts\layout\img\sidebar-menu-arrow-reverse.png" />
