--- a/src/Trace/Trace.csproj
+++ b/src/Trace/Trace.csproj
@@ -657,6 +657,8 @@
     <Content Include="views\achievement\medal\index.js" />
     <Content Include="views\achievement\trace\index.html" />
     <Content Include="views\achievement\trace\index.js" />
+    <Content Include="views\achievement\trace\modify.html" />
+    <Content Include="views\achievement\trace\modify.js" />
     <Content Include="views\integralmall\record.html" />
     <Content Include="views\integralmall\record.js" />
     <Content Include="views\integralmall\index.html" />
@@ -685,10 +687,6 @@
     <Content Include="views\users\modal.js" />
     <Content Include="views\series\index.html" />
     <Content Include="views\series\index.js" />
-    <Content Include="views\achievement\index.html" />
-    <Content Include="views\achievement\index.js" />
-    <Content Include="views\achievement\modal.html" />
-    <Content Include="views\achievement\modal.js" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
