--- a/src/Trace/Trace.csproj
+++ b/src/Trace/Trace.csproj
@@ -659,12 +659,20 @@
     <Content Include="views\achievement\trace\index.js" />
     <Content Include="views\achievement\trace\modify.html" />
     <Content Include="views\achievement\trace\modify.js" />
+    <Content Include="views\common\allowpermission.html" />
+    <Content Include="views\common\allowpermission.js" />
+    <Content Include="views\common\allowrole.html" />
+    <Content Include="views\common\allowrole.js" />
     <Content Include="views\integralmall\record.html" />
     <Content Include="views\integralmall\record.js" />
     <Content Include="views\integralmall\index.html" />
     <Content Include="views\integralmall\index.js" />
     <Content Include="views\integralmall\modify.html" />
     <Content Include="views\integralmall\modify.js" />
+    <Content Include="views\manager\roles\index.html" />
+    <Content Include="views\manager\roles\index.js" />
+    <Content Include="views\manager\roles\modal.html" />
+    <Content Include="views\manager\roles\modal.js" />
     <Content Include="views\onlinemall\banner\index.html" />
     <Content Include="views\onlinemall\banner\index.js" />
     <Content Include="views\onlinemall\banner\modal.html" />
@@ -681,10 +689,10 @@
     <Content Include="views\onlinemall\product\modify.js" />
     <Content Include="views\statistical\index.html" />
     <Content Include="views\statistical\index.js" />
-    <Content Include="views\users\index.html" />
-    <Content Include="views\users\index.js" />
-    <Content Include="views\users\modal.html" />
-    <Content Include="views\users\modal.js" />
+    <Content Include="views\manager\users\index.html" />
+    <Content Include="views\manager\users\index.js" />
+    <Content Include="views\manager\users\modal.html" />
+    <Content Include="views\manager\users\modal.js" />
     <Content Include="views\series\index.html" />
     <Content Include="views\series\index.js" />
     <Content Include="Web.config" />
