--- a/src/Trace/Trace.csproj
+++ b/src/Trace/Trace.csproj
@@ -656,10 +656,16 @@
   <ItemGroup>
     <Content Include="views\achievement\medal\index.html" />
     <Content Include="views\achievement\medal\index.js" />
-    <Content Include="views\achievement\trace\index.html" />
-    <Content Include="views\achievement\trace\index.js" />
-    <Content Include="views\achievement\trace\modify.html" />
-    <Content Include="views\achievement\trace\modify.js" />
+    <Content Include="views\postage\index.html" />
+    <Content Include="views\postage\index.js" />
+    <Content Include="views\postage\modal.html" />
+    <Content Include="views\postage\modal.js" />
+    <Content Include="views\series\modal.html" />
+    <Content Include="views\series\modal.js" />
+    <Content Include="views\trace\index.html" />
+    <Content Include="views\trace\index.js" />
+    <Content Include="views\trace\modify.html" />
+    <Content Include="views\trace\modify.js" />
     <Content Include="views\common\allowpermission.html" />
     <Content Include="views\common\allowpermission.js" />
     <Content Include="views\common\allowrole.html" />
