--- a/src/Trace/Trace.csproj
+++ b/src/Trace/Trace.csproj
@@ -658,6 +658,10 @@
     <Content Include="views\achievement\medal\index.js" />
     <Content Include="views\achievement\medal\modify.html" />
     <Content Include="views\achievement\medal\modify.js" />
+    <Content Include="views\achievement\trace\index.html" />
+    <Content Include="views\achievement\trace\index.js" />
+    <Content Include="views\achievement\trace\modify.html" />
+    <Content Include="views\achievement\trace\modify.js" />
     <Content Include="views\postage\index.html" />
     <Content Include="views\postage\index.js" />
     <Content Include="views\postage\modal.html" />
