--- a/src/Trace/Trace.csproj
+++ b/src/Trace/Trace.csproj
@@ -662,6 +662,8 @@
     <Content Include="views\achievement\trace\index.js" />
     <Content Include="views\achievement\trace\modify.html" />
     <Content Include="views\achievement\trace\modify.js" />
+    <Content Include="views\common\choose.html" />
+    <Content Include="views\common\choose.js" />
     <Content Include="views\postage\index.html" />
     <Content Include="views\postage\index.js" />
     <Content Include="views\postage\modal.html" />
