--- a/src/Trace/Trace.csproj
+++ b/src/Trace/Trace.csproj
@@ -654,10 +654,14 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="views\achievement\medal\choose.html" />
+    <Content Include="views\achievement\medal\choose.js" />
     <Content Include="views\achievement\medal\index.html" />
     <Content Include="views\achievement\medal\index.js" />
     <Content Include="views\achievement\medal\modify.html" />
     <Content Include="views\achievement\medal\modify.js" />
+    <Content Include="views\achievement\trace\choose.html" />
+    <Content Include="views\achievement\trace\choose.js" />
     <Content Include="views\achievement\trace\index.html" />
     <Content Include="views\achievement\trace\index.js" />
     <Content Include="views\achievement\trace\modify.html" />
