--- a/src/Trace/assets/global/plugins/ueditor/asp/config.json
+++ b/src/Trace/assets/global/plugins/ueditor/asp/config.json
@@ -3,9 +3,9 @@
   /* 上传图片配置项 */
   "imageActionName": "uploadimage", /* 执行上传图片的action名称 */
   "imageFieldName": "upfile", /* 提交的图片表单名称 */
-  "imageMaxSize": 2048000, /* 上传大小限制，单位B */
+  "imageMaxSize": 204800000, /* 上传大小限制，单位B */
   "imageAllowFiles": [ ".png", ".jpg", ".jpeg", ".gif", ".bmp" ], /* 上传图片格式显示 */
-  "imageCompressEnable": true, /* 是否压缩图片,默认是true */
+  "imageCompressEnable": false, /* 是否压缩图片,默认是true */
   "imageCompressBorder": 1600, /* 图片压缩最长边限制 */
   "imageInsertAlign": "none", /* 插入的图片浮动方式 */
   "imageUrlPrefix": "http://101.200.52.199:11111/assets/global/plugins/ueditor/asp/", /* 图片访问路径前缀 */
@@ -28,14 +28,14 @@
   "scrawlActionName": "uploadscrawl", /* 执行上传涂鸦的action名称 */
   "scrawlFieldName": "upfile", /* 提交的图片表单名称 */
   "scrawlPathFormat": "upload/image/{yyyy}{mm}{dd}/{time}{rand:6}", /* 上传保存路径,可以自定义保存路径和文件名格式 */
-  "scrawlMaxSize": 2048000, /* 上传大小限制，单位B */
-  "scrawlUrlPrefix": "/ueditor/asp/", /* 图片访问路径前缀 */
+  "scrawlMaxSize": 204800000, /* 上传大小限制，单位B */
+  "scrawlUrlPrefix": "http://101.200.52.199:11111/assets/global/plugins/ueditor/asp/", /* 图片访问路径前缀 */
   "scrawlInsertAlign": "none",
 
   /* 截图工具上传 */
   "snapscreenActionName": "uploadimage", /* 执行上传截图的action名称 */
   "snapscreenPathFormat": "upload/image/{yyyy}{mm}{dd}/{time}{rand:6}", /* 上传保存路径,可以自定义保存路径和文件名格式 */
-  "snapscreenUrlPrefix": "/ueditor/asp/", /* 图片访问路径前缀 */
+  "snapscreenUrlPrefix": "http://101.200.52.199:11111/assets/global/plugins/ueditor/asp/", /* 图片访问路径前缀 */
   "snapscreenInsertAlign": "none", /* 插入的图片浮动方式 */
 
   /* 抓取远程图片配置 */
@@ -43,16 +43,16 @@
   "catcherActionName": "catchimage", /* 执行抓取远程图片的action名称 */
   "catcherFieldName": "source", /* 提交的图片列表表单名称 */
   "catcherPathFormat": "upload/image/{yyyy}{mm}{dd}/{time}{rand:6}", /* 上传保存路径,可以自定义保存路径和文件名格式 */
-  "catcherUrlPrefix": "/ueditor/asp/", /* 图片访问路径前缀 */
-  "catcherMaxSize": 2048000, /* 上传大小限制，单位B */
+  "catcherUrlPrefix": "http://101.200.52.199:11111/assets/global/plugins/ueditor/asp/", /* 图片访问路径前缀 */
+  "catcherMaxSize": 204800000, /* 上传大小限制，单位B */
   "catcherAllowFiles": [ ".png", ".jpg", ".jpeg", ".gif", ".bmp" ], /* 抓取图片格式显示 */
 
   /* 上传视频配置 */
   "videoActionName": "uploadvideo", /* 执行上传视频的action名称 */
   "videoFieldName": "upfile", /* 提交的视频表单名称 */
   "videoPathFormat": "upload/video/{yyyy}{mm}{dd}/{time}{rand:6}", /* 上传保存路径,可以自定义保存路径和文件名格式 */
-  "videoUrlPrefix": "/ueditor/asp/", /* 视频访问路径前缀 */
-  "videoMaxSize": 102400000, /* 上传大小限制，单位B，默认100MB */
+  "videoUrlPrefix": "http://101.200.52.199:11111/assets/global/plugins/ueditor/asp/", /* 视频访问路径前缀 */
+  "videoMaxSize": 1024000000, /* 上传大小限制，单位B，默认100MB */
   "videoAllowFiles": [
     ".flv",
     ".swf",
@@ -77,7 +77,7 @@
   "fileActionName": "uploadfile", /* controller里,执行上传视频的action名称 */
   "fileFieldName": "upfile", /* 提交的文件表单名称 */
   "filePathFormat": "upload/file/{yyyy}{mm}{dd}/{time}{rand:6}", /* 上传保存路径,可以自定义保存路径和文件名格式 */
-  "fileUrlPrefix": "/ueditor/asp/", /* 文件访问路径前缀 */
+  "fileUrlPrefix": "http://101.200.52.199:11111/assets/global/plugins/ueditor/asp/", /* 文件访问路径前缀 */
   "fileMaxSize": 51200000, /* 上传大小限制，单位B，默认50MB */
   "fileAllowFiles": [
     ".png",
@@ -126,14 +126,14 @@
   "imageManagerActionName": "listimage", /* 执行图片管理的action名称 */
   "imageManagerListPath": "upload/image", /* 指定要列出图片的目录 */
   "imageManagerListSize": 20, /* 每次列出文件数量 */
-  "imageManagerUrlPrefix": "/ueditor/asp/", /* 图片访问路径前缀 */
+  "imageManagerUrlPrefix": "http://101.200.52.199:11111/assets/global/plugins/ueditor/asp/", /* 图片访问路径前缀 */
   "imageManagerInsertAlign": "none", /* 插入的图片浮动方式 */
   "imageManagerAllowFiles": [ ".png", ".jpg", ".jpeg", ".gif", ".bmp" ], /* 列出的文件类型 */
 
   /* 列出指定目录下的文件 */
   "fileManagerActionName": "listfile", /* 执行文件管理的action名称 */
   "fileManagerListPath": "upload/file", /* 指定要列出文件的目录 */
-  "fileManagerUrlPrefix": "/ueditor/asp/", /* 文件访问路径前缀 */
+  "fileManagerUrlPrefix": "http://101.200.52.199:11111/assets/global/plugins/ueditor/asp/", /* 文件访问路径前缀 */
   "fileManagerListSize": 20, /* 每次列出文件数量 */
   "fileManagerAllowFiles": [
     ".png",
